# nvs-dotenv

./: .gitignore  .pre-commit-config.yaml  API.md  CMakeLists.txt  Doxyfile  README.md  dotenv_to_csv.py  idf_component.yml  nvs_dotenv.c
.github/workflows/: build_example.yml  upload_component.yml
examples/nvs-dotenv-example/: .env  CMakeLists.txt  partitions_example.csv
examples/nvs-dotenv-example/main/: CMakeLists.txt  idf_component.yml  nvs-dotenv-example.c
include/: nvs_dotenv.h
